--- a/css/screen.css
+++ b/css/screen.css
@@ -1,25 +1,15 @@
+body {
+    display: flex;
+    flex-direction: column;
+    row-gap: 2em;
+}
+
 html {
     font-size: 16px;
     line-height: 1.2em;
     background-color: lightcyan;
     margin: 1em;
     font-family: sans-serif;
-}
-
-header {
-    display: flex;
-    flex-direction: column;
-    row-gap: 0.375em;
-}
-
-body {
-    background-color: white;
-    padding: 1em;
-    display: flex;
-    flex-direction: column;
-    row-gap: 2em;
-    max-width: 600px;
-    border-radius: 10px;
 }
 
 h1 {
@@ -32,23 +22,44 @@ h2 {
     line-height: 1.2em;
 }
 
+header {
+    display: flex;
+    flex-direction: column;
+    row-gap: 0.375em;
+}
+
 .form_list {
     display: flex;
     flex-direction: column;
-    row-gap: 1.25em;
-    width: fit-content;
-    max-width: 100%;
+    row-gap: 0.75em;
+    padding: 1em;
+    border-radius: 10px;
+    background-color: white;
+    box-sizing: border-box;
+    max-width: 432px;
 }
 
-.form_list__item:not(:last-child) {
+.form_list__item {
+    flex-grow: 1;
+    flex-shrink: 1;
+    flex-basis: 0;
     display: flex;
     flex-direction: column;
-    width: fit-content;
-    max-width: 100%;
-    padding: 1em;
-    background-color: lightgray;
-    border-radius: 10px;
     row-gap: 0.375em;
+}
+
+.form_list__item__label {
+    flex-grow: 1;
+    flex-shrink: 1;
+    flex-basis: 0;
+    max-width: 150px;
+}
+
+.form_list__item__input {
+    flex-grow: 2;
+    flex-shrink: 1;
+    flex-basis: 0;
+    max-width: 250px;
     box-sizing: border-box;
 }
 
@@ -57,9 +68,58 @@ h2 {
     flex-direction: row;
 }
 
+.form_list__item__sublist__item {
+    flex-grow: 2;
+    flex-shrink: 1;
+    flex-basis: 0;
+}
+
+.form_list__item__sublist__item__gap {
+    flex-grow: 1;
+    text-align: center;
+}
+
+.form_list__item__sublist__item__input {
+    box-sizing: border-box;
+    width: 100%;
+}
+
+#submit_button
+{
+    margin-top: 0.75em;
+    max-width: fit-content;
+    box-sizing: border-box;
+    padding-top: 0.375em;
+    padding-bottom: 0.375em;
+    padding-left: 0.75em;
+    padding-right: 0.75em;
+    background-color: cyan;
+    font-weight: 700;
+    border-width: 2px;
+    border-color: black;
+    border-radius: 10px;
+    color: black;
+}
+
+#submit_button:hover
+{
+    background-color: green;
+}
+
 @media only screen and (min-width: 480px)
 {
+
     body {
+        justify-content: center;
+        align-items: center;
+    }
+
+    .form_list__item {
+        flex-direction: row;
+    }
+
+    .form_list__item:last-of-type
+    {
         margin-left: auto;
         margin-right: auto;
     }
